ajustes no dockerfile e compose para subir as imagens e ajustes gerais na applicacao

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,2 @@
-# Configurando o mongodb
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=gff
-spring.data.mongodb.username=root
-spring.data.mongodb.password=secret
-spring.data.mongodb.authentication-database=admin
+# Configurando o application por ambiente
+spring.profiles.active=@activatedProperties@
