--- a/kubernetes/mongodb/mongodb-nodeport-svc.yaml
+++ b/kubernetes/mongodb/mongodb-nodeport-svc.yaml
@@ -8,8 +8,8 @@ spec:
   type: NodePort
   ports:
     - port: 27017
-    - protocol: TCP
-    - targetPort: 27017
-    - nodePort: 32010
+      protocol: TCP
+      targetPort: 27017
+      nodePort: 32000
   selector:
     app: pod-gff-mongo-db
