--- a/kubernetes/mongodb/mongodb-client.yaml
+++ b/kubernetes/mongodb/mongodb-client.yaml
@@ -8,5 +8,10 @@ spec:
   containers:
     - name: mongodb
       image: mongo:4.2.8
+      env:
+          - name: MONGO_INITDB_ROOT_USERNAME
+            value: admin
+          - name: MONGO_INITDB_ROOT_PASSWORD
+            value: password
       ports:
         - containerPort: 27017
