--- a/kubernetes/mongodb/pod-gff-mongo-db.yaml
+++ b/kubernetes/mongodb/pod-gff-mongo-db.yaml
@@ -9,9 +9,9 @@ spec:
     - name: mongodb
       image: mongo:4.2.8
       env:
-          - name: MONGO_INITDB_ROOT_USERNAME
-            value: admin
-          - name: MONGO_INITDB_ROOT_PASSWORD
-            value: password
+        - name: MONGO_INITDB_ROOT_USERNAME
+          value: root
+        - name: MONGO_INITDB_ROOT_PASSWORD
+          value: secret
       ports:
         - containerPort: 27017
