--- a/kubernetes/pod-gff-api.yaml
+++ b/kubernetes/pod-gff-api.yaml
@@ -1,10 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: gff-api-config
+  name: pod-gff-api
 spec:
   containers:
   - name: gff-api-config
     image: marcusvcl/gff
+    env:
+      - name: SPRING_PROFILES_ACTIVE
+        value: prod
     ports:
-    - containerPort: 3000
+    - containerPort: 8080
