--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,5 +3,5 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=gff
 spring.data.mongodb.username=root
-spring.data.mongodb.password=secret
+spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
