--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 # Configurando o mongodb
-spring.data.mongodb.host=mongodb
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=gff
 spring.data.mongodb.username=root
