feat: rearranjo da web para application layer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 # Configurando o application por ambiente
 spring.profiles.active=@activatedProperties@
+springdoc.swagger-ui.operations-sorter=method
+springdoc.swagger-ui.tags-sorter=alpha
