correcao de yaml - deploy

--- a/k8s/t1/deployment.yaml
+++ b/k8s/t1/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: pod-gff-api
-          image: "ritchellydomingos/gff:latest:latest"
+          image: "ritchellydomingos/gff:latest"
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: prod
