alteracao de imagem para testes

--- a/k8s/test1/replicaset.yaml
+++ b/k8s/test1/replicaset.yaml
@@ -16,4 +16,4 @@ spec:
     spec:
       containers:
         - name: pod-gff-api
-          image: "ritchellydomingos/gff:latest"
+          image: marcusvcl/gff:latest
