correcao nome do container

--- a/k8s/t1/pod-gff-api.yaml
+++ b/k8s/t1/pod-gff-api.yaml
@@ -4,7 +4,7 @@ metadata:
   name: pod-gff-api
 spec:
   containers:
-  - name: gff-api-config
+  - name: pod-gff-api
     image: ritchellydomingos/gff:latest
     env:
       - name: SPRING_PROFILES_ACTIVE
