--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 # Configurando o mongodb
-spring.data.mongodb.host=mongodb
-spring.data.mongodb.port=27017
+spring.data.mongodb.host=192.168.49.2
+spring.data.mongodb.port=32000
 spring.data.mongodb.database=gff
 spring.data.mongodb.username=root
 spring.data.mongodb.password=secret
