--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # Configurando o mongodb
-spring.data.mongodb.host=192.168.49.2
+spring.data.mongodb.uri=mongodb://svc-gff-mongo-db:32000
 spring.data.mongodb.port=32000
 spring.data.mongodb.database=gff
 spring.data.mongodb.username=root
