--- a/kubernetes/k8s/pod-gff-api.yaml
+++ b/kubernetes/k8s/pod-gff-api.yaml
@@ -2,12 +2,10 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: pod-gff-api
-  labels:
-    app: pod-gff-api
 spec:
   containers:
-  - name: gff-api-config
-    image: ritchellydomingos/gff:ipVersion
+  - name: pod-gff-api
+    image: ritchellydomingos/gff
     env:
       - name: SPRING_PROFILES_ACTIVE
         value: prod
