feat: adicionando migrations para o db

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 # Configurando o mongodb
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=${DATABASE_URL}
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=gff
-spring.data.mongodb.username=root
-spring.data.mongodb.password=secret
+spring.data.mongodb.username=${DATABASE_USERNAME}
+spring.data.mongodb.password=${DATABASE_PASSWORD}
 spring.data.mongodb.authentication-database=admin
